# tournal

./: .gitignore  Cargo.toml  log.txt
data/: sqlite.db
migrations/2024-05-24-063338_create_journal/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  tui.rs
src/cli/: mod.rs  pet.rs
