[package]
name = "tournal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
futures = "0.3.30"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
ratatui = { version = "0.26.3", features = ["crossterm", "serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
